feat: Correction question 7
