# src/controllers/author.controller.ts
@@ -31,7 +31,7 @@ export class AuthorController extends Controller {
   // Crée un nouvel auteur
   @Post("/")
   public async createAuthor(
-    @Body() requestBody: AuthorDTO
+    @Body() requestBody: AuthorDTO,
   ): Promise<AuthorDTO> {
     const { first_name, last_name } = requestBody;
     return authorService.createAuthor(first_name, last_name);
@@ -47,16 +47,14 @@ export class AuthorController extends Controller {
   @Patch("{id}")
   public async updateAuthor(
     @Path() id: number,
-    @Body() requestBody: AuthorDTO
+    @Body() requestBody: AuthorDTO,
   ): Promise<AuthorDTO> {
     const { first_name, last_name } = requestBody;
     return authorService.updateAuthor(id, first_name, last_name);
   }
 
   @Get("{id}/books")
-  public async getBooksByAuthorId(
-    @Path() id: number
-  ): Promise<BookDTO[]> {
+  public async getBooksByAuthorId(@Path() id: number): Promise<BookDTO[]> {
     return await authorService.getBooksByAuthorId(id);
   }
 }
